[package]

name = "robinson"
version = "0.0.1"
authors = ["Matt Brubeck <mbrubeck@limpet.net>"]
tags = []

[[bin]]

name = "robinson"
path = "src/main.rs"

[dependencies]
getopts = "0.1.4"

[dependencies.image]
git = "https://github.com/PistonDevelopers/image"

[dependencies.freetype]
git = "https://github.com/servo/rust-freetype"

[dependencies]
libc = "*"
